.provarCaches/00D410000011HE0EAM/objects/rstk__syorgapprv__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_syorgapprv</customHelpPage>
    <description>syorgapprv__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syorgapprv_apprvid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Approval ID for the group selected in Organizational Department. It must be a valid ID.</inlineHelpText>
        <label>Approval ID</label>
        <referenceTo>rstk__syapprv__c</referenceTo>
        <relationshipLabel>Group Approvals</relationshipLabel>
        <relationshipName>SYORGAPPRVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syorgapprv_descr__c</fullName>
        <inlineHelpText>This is the detailed description of the Approval ID</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syorgapprv_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Group Approvals</relationshipLabel>
        <relationshipName>syorgapprvs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syorgapprv_frmamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the approval Amount for the associated Approval ID for this Organizational Department.</inlineHelpText>
        <label>Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syorgapprv_orgid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the group for which the approval levels are established</inlineHelpText>
        <label>Organizational Department</label>
        <referenceTo>rstk__syorg__c</referenceTo>
        <relationshipLabel>Group Approvals</relationshipLabel>
        <relationshipName>SYORGAPPRVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syorgapprv_type__c</fullName>
        <inlineHelpText>This is the Approval Type for the Organizational Department - i)Agreement Approver. ii)Indirect Material Requisition Approver. iii)Purchase Order Approver. iv)Service Requisition Approver</inlineHelpText>
        <label>Approval Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement Approver</fullName>
                </value>
                <value>
                    <fullName>Indirect Material Requisition Approver</fullName>
                </value>
                <value>
                    <fullName>Purchase Order Approver</fullName>
                </value>
                <value>
                    <fullName>Service  Requisition Approver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Organizational Dept Approval</label>
    <listViews>
        <fullName>rstk__RS_Approval_Groups</fullName>
        <columns>NAME</columns>
        <columns>rstk__syorgapprv_div__c</columns>
        <columns>rstk__syorgapprv_orgid__c</columns>
        <columns>rstk__syorgapprv_descr__c</columns>
        <columns>rstk__syorgapprv_apprvid__c</columns>
        <columns>rstk__syorgapprv_type__c</columns>
        <columns>rstk__syorgapprv_frmamt__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Approval Groups</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>